Final Project Done

--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-<title>Vaughn Roche de Roda</title>
+    <title>Vaughn Roche de Roda</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Vaughn Roche de Roda</h1>
-<p>Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to Meters)</p>
-<p>Assignment #2 - Income Tax Calculator</p>
-<p>Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural Numbers</p>
-<p>Assignment #4 - Simple Payroll</p>
+    <div class="phone">
+        <div class="screen">
+            <div class="widget">
+                <h1>Vaughn Roche de Roda</h1>
+            </div>
+            <div class="apps">
+                <div class="app">
+                    <a href="Temp&LengthConversion/converter.html">
+                        <img src="icons/conversion.png" alt="Conversion">
+                        <span>Conversion</span>
+                    </a>
+                </div>
+                <div class="app">
+                    <a href="TaxCalc/tax.html">
+                        <img src="icons/tax.png" alt="Tax Calculator">
+                        <span>Tax Calculator</span>
+                    </a>
+                </div>
+                <div class="app">
+                    <a href="Factorial/factorial.html">
+                        <img src="icons/factorial.png" alt="Factorial">
+                        <span>Factorial</span>
+                    </a>
+                </div>
+                <div class="app">
+                    <a href="Payroll/payroll.html">
+                        <img src="icons/payroll.png" alt="Payroll">
+                        <span>Payroll</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
